[project]
name = "portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Allan de Oliveira Almeida",email = "arumeidaaran@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg (>=3.2.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "portfolio", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
taskipy = "^1.14.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev portfolio/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=portfolio -vv'
post_test = 'coverage html'
